# nextvine

./: Button.tsx  README.md
.next/: trace
AIS-API/: Dockerfile  esrgan.py  image_segmentation.py  main.py  main1.py  pyproject.toml  readme.txt  requirements.txt  utils.py
AIS-API/.devcontainer/: devcontainer.json
AIS-API/AandW/: esrgan_architecture.json
agent/: main.py
landingpage/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
landingpage/app/: globals.css  layout.tsx  page.tsx
landingpage/components/: Navigation.tsx
landingpage/components/sections/: About.tsx  Contact.tsx  Features.tsx  Hero.tsx  Interactive.tsx  Monitoring.tsx  Reasons.tsx  Services.tsx  Solution.tsx
landingpage/components/ui/: Container.tsx  FullPageScroll.tsx  ScrollIndicator.tsx  ScrollToTop.tsx  SpinalControls.tsx  SpinalInteraction.tsx  SurveyModal.tsx
landingpage/lib/: language-context.tsx  utils.ts
landingpage/public/Interact/: scoliosis.html
mobile/: .firebaserc  .gitignore  GOOGLE_SIGNIN_SETUP.md  SESSION_MANAGEMENT_GUIDE.md  firebase.json  pubspec.yaml
mobile/android/: build.gradle.kts
mobile/android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
mobile/app/: app.zip.hash
mobile/lib/: main.dart
mobile/test/: video_service_test.dart
mobile/web/: index.html
ui/: .gitignore  launch.json  pubspec.yaml
ui/android/: gradle.properties
ui/app/: app.zip.hash
ui/appAIS-API/: app.zip.hash
ui/lib/: firebase_options.dart  main.dart  theme.dart
ui/test/: video_service_test.dart
(+63 files in other folders)
